[package]
name = "openvoxellauncher"
version = "0.1.2"
edition = "2024"
description = "The OpenVoxel Launcher directly in your terminal!"
license = "MIT"
repository = "https://github.com/OpenVoxelStudios/CLI"
homepage = "https://github.com/OpenVoxelStudios/CLI"
documentation = "https://github.com/OpenVoxelStudios/CLI"
readme = "README.md"
keywords = ["minecraft", "launcher", "cli", "openvoxel", "ovl"]
categories = ["command-line-utilities", "games"]
authors = ["KodeurKubik"]

[[bin]]
name = "ovl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
open_launcher = { git = "https://github.com/KodeurKubik/open_launcher_rs" }
tokio = { version = "1.45.1", features = ["full"] }
dirs = "4.0"
zip = "0.6"
sha256 = "1.6.0"
fastnbt = "2.5.0"
flate2 = "1.1.1"
inquire = "0.7.5"
colored = "2"
tiny_http = "0.12"
open = "5"
oauth2 = "5.0.0"
arboard = "3.5.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }